@@ -1,3 +1,14 @@
+2009-03-02  Bastien Nocera  <hadess@hadess.net>
+
+	* font-viewer/Makefile.am:
+	* font-viewer/font-thumbnailer.c (main):
+	* font-viewer/totem-resources.c (set_resource_limits),
+	(time_monitor), (totem_resources_monitor_start),
+	(totem_resources_monitor_stop):
+	* font-viewer/totem-resources.h: Stop the font thumbnailer
+	eating all the CPU, and limit the resources to 30 seconds
+	and 256MB of RAM, which should be plenty (Closes: #573795)
+
 ==================== 2.25.92 ====================
 
 2009-03-02  Jens Granseuer  <jensgr@gmx.net>
